--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-laptop"></i></div>
                                     <h2 class="h5">Problemen met de computer?</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <p class="mb-0">Doet die computer weer lastig? Is hij traag of loopt hij vast? Is hij toe aan vervanging? Ik help je met veel plezier verder!</p>
                                 </div>
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-phone"></i></div>
                                     <h2 class="h5">Last met de smartphone?</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <p class="mb-0">Snap je niets van je "slimme" gsm? Wil je er meer uitleg over? Heb je hulp nodig met bepaalde apps? Ik leg het allemaal uit!</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-tablet"></i></div>
                                     <h2 class="h5">Tablet die niet wilt meewerken?</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <p class="mb-0">Wilt de tablet niet meewerken? Zijn er apps die u niet werkend krijgt? Ik help u verder!</p>
                                 </div>
                                 <div class="col h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-printer"></i></div>
                                     <h2 class="h5">Printer die lastig doet?</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <p class="mb-0">Printer niet gevonden? Krijg je er geen enkele afdruk meer uit? Moet er een nieuwe printer worden geïnstalleerd? Ik neem al je zorgen weg!</p>
                                 </div>
                             </div>
                         </div>
@@ -93,19 +93,16 @@
                     <div class="row gx-5">
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
+                                <img class="card-img-top" src="assets/carine.jpeg" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
-                                    <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-text mb-0">Wat was ik blij met de hulp van Kobe. Op een goeie en vlotte manier heeft hij me geholpen met mijn computer probleem. Ik wist niet waar ik terecht kon…ik zou hem aan iedereen aanraden.  Ik ben grote fan!</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Kelly Rowan</div>
-                                                <div class="text-muted">March 12, 2022 &middot; 6 min read</div>
+                                                <div class="fw-bold">Carine</div>
+                                                <div class="text-muted">Maart 12, 2022</div>
                                             </div>
                                         </div>
                                     </div>
@@ -114,19 +111,16 @@
                         </div>
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
+                                <img class="card-img-top" src="assets/johan.jpeg" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
-                                    <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-text mb-0">Alhoewel ik al meer dan dertig jaar met computers werk, heb ik toch regelmatig hulp nodig bij het onderhoud van mijn PC, smartphone etc. Kobe lost alles snel en deskundig op en geeft daarbij graag uitleg, zodat ik beter begrijp hoe ik me zelf kan verder helpen.</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Josiah Barclay</div>
-                                                <div class="text-muted">March 23, 2022 &middot; 4 min read</div>
+                                                <div class="fw-bold">Johan</div>
+                                                <div class="text-muted">Augustus 23, 2022</div>
                                             </div>
                                         </div>
                                     </div>
@@ -135,19 +129,20 @@
                         </div>
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
+                                <img class="card-img-top" src="assets/marie.jpeg" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
-                                    <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-text mb-0">Kobe, hartelijk dank voor je hulp met de computer, Iphone en Ipad!
+                                        Als 84-jarige, met een slecht geheugen, ben ik erg blij met je geduldige, rustige uitleg en hulp.
+                                        Het is erg fijn dat ik altijd een beroep op je kan doen en je meestal binnen enkele dagen bereid bent om naar mij toe te komen.
+                                        Wij kennen elkaar al enige tijd en ik hoop dan ook nog verder een beroep op je te mogen blijven doen.
+                                    </p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Evelyn Martinez</div>
-                                                <div class="text-muted">April 2, 2022 &middot; 10 min read</div>
+                                                <div class="fw-bold">Marie</div>
+                                                <div class="text-muted">Februari 2, 2023</div>
                                             </div>
                                         </div>
                                     </div>
