--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet"/>
+    <link href="css/CustomStyle.css" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column">
 <main class="flex-shrink-0">
@@ -29,7 +30,6 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">Over mij</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Prijzen</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">Veelgestelde vragen</a></li>
                 </ul>
             </div>
         </div>
@@ -50,27 +50,27 @@
             </div>
             <!-- Contact cards-->
             <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5 offset-md-3">
-                <div class="col">
-                    <a href="mailto: kobe.laurijssen@outlook.com" style="text-decoration: none">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                <div class="col contactCard ">
+                    <a class="aContact" href="mailto: kobe.laurijssen@outlook.com" style="text-decoration: none">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3 logoContact"><i
                                 class="bi bi-envelope"></i></div>
                         <div class="h5 mb-2">Mail</div>
                         <p class="text-muted mb-0 fw-bolder">kobe.laurijssen@outlook.com</p>
                         <p class="text-muted mb-0">Stuur me een mail en ik antwoord zo snel als ik kan.</p>
                     </a>
                 </div>
-                <div class="col">
-                    <a href="tel: 32497062398" style="text-decoration: none">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                <div class="col contactCard  ">
+                    <a class="aContact" href="tel: 32497062398" style="text-decoration: none">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3 logoContact"><i
                                 class="bi bi-telephone"></i></div>
                         <div class="h5">Telefoon</div>
                         <p class="text-muted mb-0 fw-bolder">+32 4 97 06 23 98</p>
                         <p class="text-muted mb-0">Stuur me een gerust een berichtje of bel me op.</p>
                     </a>
                 </div>
-                <div class="col">
-                    <a href="https://www.facebook.com/HulprComputerHulp" target="_blank" style="text-decoration: none">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                <div class="col contactCard  ">
+                    <a class="aContact" href="https://www.facebook.com/HulprComputerHulp" target="_blank" style="text-decoration: none">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3 logoContact"><i
                                 class="bi bi-facebook"></i></div>
                         <div class="h5 mb-2">Facebook</div>
                         <p class="text-muted mb-0">Hulpr is ook te bereiken via FaceBook.</p>
