fixed about page

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/kobe.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Aangename kennismaking!</h2>
-                            <p class="lead fw-normal text-muted mb-0">Mijn naam is Kobe Laurijssen, een 23-jarige informaticus. Ik ben afgestudeerd met het diploma Toegepaste Informatica.
+                            <p class="lead fw-normal text-muted mb-0">Mijn naam is Kobe Laurijssen, een 23-jarige informaticus, afgestudeerd met het diploma Toegepaste Informatica.
                                                                         Ik heb gedurende mijn opleiding reeds meer dan 350 mensen geholpen met ICT problemen. Elke individuele opdracht
                                                                         werd met professionaliteit en vakkundigheid opgelost, en dit zal voor uw problemen ook zo gelden. </p>
                         </div>
